--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^13.2.7",
     "@angular/platform-browser-dynamic": "^13.2.7",
     "@angular/router": "^13.2.7",
+    "date-fns": "^2.28.0",
     "moment": "^2.29.1",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
