--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/cli": "^13.2.6",
     "@angular/compiler-cli": "^13.2.7",
     "@types/jasmine": "^3.10.4",
+    "@types/jest": "^27.4.1",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
