--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^13.2.7",
     "date-fns": "^2.28.0",
     "moment": "^2.29.1",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "^7.5.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
